Enable native access for JNA to fix Java 21+ warnings